Fix command bar menu subtext style in dark mode

--- a/src/core/command-bar/command-bar.module.scss
+++ b/src/core/command-bar/command-bar.module.scss
@@ -68,7 +68,7 @@
   flex-direction: column;
   .menuSub {
     font-size: smaller;
-    color: rgba(0, 0, 0, 0.5);
+    opacity: 0.5;
   }
 }
 
